src/objects/Medication_Prescribed__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultation</label>
        <referenceTo>Consultation__c</referenceTo>
        <relationshipLabel>Medication Prescribed</relationshipLabel>
        <relationshipName>Medication_Prescribed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consumables__c</fullName>
        <label>Consumables</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consumables</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Name__c</fullName>
        <label>Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medication_Name__c</fullName>
        <label>Medication Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aciclovir 400mg (Box of 56)</fullName>
                </value>
                <value>
                    <fullName>Aciclovir 800mg (Box of 35)</fullName>
                </value>
                <value>
                    <fullName>Aciclovir Cream (Zovirax) 2g</fullName>
                </value>
                <value>
                    <fullName>Adrenaline 1mg /ml of 1 In 1000</fullName>
                </value>
                <value>
                    <fullName>Adrenaline Min-I-Jet 1 in 10,000 – 10 ml</fullName>
                </value>
                <value>
                    <fullName>Amiodarone Hydrochloride Min-I-Jet 30mg/ml</fullName>
                </value>
                <value>
                    <fullName>Amoxicillin Capsules 500mg (Box of 21)</fullName>
                </value>
                <value>
                    <fullName>Anthisan Cream 30g Tube</fullName>
                </value>
                <value>
                    <fullName>Anusol HC Ointment 30g tube</fullName>
                </value>
                <value>
                    <fullName>Atenolol 50 mg (Box of 28)</fullName>
                </value>
                <value>
                    <fullName>Atropine Sulphate Min-I-Jet 1 mg/10 ml – 10 ml</fullName>
                </value>
                <value>
                    <fullName>Azithromycin 500mg (Box of 3)</fullName>
                </value>
                <value>
                    <fullName>Bactroban Ointment (Mupirocin) 15g</fullName>
                </value>
                <value>
                    <fullName>Beclomethasone 100mcg MDI</fullName>
                </value>
                <value>
                    <fullName>Benoxinate Minims (Oxybuprocaine) 0.4% 1ml</fullName>
                </value>
                <value>
                    <fullName>Benzylpenicillin Vials 600mg (Box of 2)</fullName>
                </value>
                <value>
                    <fullName>Betamethasone (Betnovate Ointment) 30g</fullName>
                </value>
                <value>
                    <fullName>Bonjela Oral Gel 15g</fullName>
                </value>
                <value>
                    <fullName>Calamine Aqueous Cream BP 100g</fullName>
                </value>
                <value>
                    <fullName>Calcium Gluconate Gel and Injection 25g/10%</fullName>
                </value>
                <value>
                    <fullName>Cavit Boxes – 4 tubes</fullName>
                </value>
                <value>
                    <fullName>Ceftriaxone Vial (Rocephin)</fullName>
                </value>
                <value>
                    <fullName>Cetirizine Tablets 10 mg (Box of 30)</fullName>
                </value>
                <value>
                    <fullName>Cetrimide Cream BPC 30 g</fullName>
                </value>
                <value>
                    <fullName>Chloramphenicol 0.5% 10ml</fullName>
                </value>
                <value>
                    <fullName>Chloramphenicol 1% - 4g</fullName>
                </value>
                <value>
                    <fullName>Chlorhexidine 100ml</fullName>
                </value>
                <value>
                    <fullName>Chlorhexidine Gluconate Concentrate with Cetrimide - sachets (Tisept)</fullName>
                </value>
                <value>
                    <fullName>Chlorphenamine lnj 10mg/ml (Box of 5)</fullName>
                </value>
                <value>
                    <fullName>Chlorpromazine 25mg (Box of 28)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medication Prescribed</relationshipLabel>
        <relationshipName>Medication_Prescribed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Add any relevant notes including dosage direction given</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prescribed_Dose__c</fullName>
        <label>Prescribed Dose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prescriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prescriber</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Resource</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medication Prescribed (Prescriber)</relationshipLabel>
        <relationshipName>Medication_Prescribed1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prescription_Frequency__c</fullName>
        <label>Prescription Frequency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity_Prescribed__c</fullName>
        <label>Quantity Prescribed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Medication Prescribed</label>
    <nameField>
        <displayFormat>MP - {000000}</displayFormat>
        <label>Medication Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medication Prescribed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>